LEReportsAndDashboards/src/objects/Test_User__c.object
<CustomObject>
    <fields>
        <fullName>Case_Study__c</fullName>
        <label>Case Study</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Test User</label>
    <nameField>
        <label>Test_User__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>